--- a/impala-etl/docs/Configuracion/config.tex
+++ b/impala-etl/docs/Configuracion/config.tex
@@ -18,7 +18,7 @@
 \lhead{\fancyplain{}{\textsl{\leftmark}}}											%Texto cabecera izquierda
 \chead{}																											%Texto cabecera centro
 \rhead{\fancyplain{}{\textsc{\rightmark}}}										%Texto cabecera derecha
-\lfoot{ETL CON IMPALA}	%Texto pie izquierda
+\lfoot{BIG DATA I: ETL con IMPALA}	%Texto pie izquierda
 \cfoot{}																											%Texto pie centro
 \rfoot{\thepage}																							%Texto pie derecha
 %---------------------------------------------------
