--- a/impala-etl/docs/Prefacio/portada.tex
+++ b/impala-etl/docs/Prefacio/portada.tex
@@ -15,7 +15,7 @@
 % Upper part of the page
 % 
 % Title
-{\Huge\bfseries ETL CON IMPALA\\
+{\Huge\bfseries  ETL: IMPALA\\
 }
 \noindent\rule[-1ex]{\textwidth}{3pt}\\[3.5ex]
 
